--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
 
         <title>Logo</title>
 
-        <!-- FontAwesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-            crossorigin="anonymous" referrerpolicy="no-referrer">
-
         <!-- Reset Style css -->
         <link rel="stylesheet" href="css/reset.css">
 
@@ -31,8 +26,61 @@
     <body class="debug">
 
         <!-- Header start -->
-        <header>
+        <header class="main-header">
+
             <nav class="nav-bar">
+
+                <div class="container flex">
+
+                    <div class="nav__logo">
+
+                        <a href="#">
+                            <img src="img/logo.png" alt="Logo logo" class="logo__img">
+                        </a>
+
+                    </div>
+
+                    <div class="nav__list">
+
+                        <ul class="flex">
+                            <li>
+                                <a href="#">
+                                    Planning
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    Testimonials
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    Features
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
+                                    About Us
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#" class="button">
+                                    Get Started
+                                </a>
+                            </li>
+                        </ul>
+
+                    </div>
+
+                    <div class="nav__bars">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+
+                </div>
 
             </nav>
         </header>
@@ -59,6 +107,11 @@
 
         </footer>
         <!--/Footer-->
+
+
+
+        <!-- FontAwesome -->
+        <script src="https://kit.fontawesome.com/b0485a66c8.js" crossorigin="anonymous"></script>
 
     </body>
 
