rimosso bar da versione desktop

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
                     </div>
 
+                    <!-- Nav List start -->
                     <div class="nav__list">
 
                         <ul class="flex">
@@ -73,6 +74,7 @@
                                 </a>
                             </li>
                         </ul>
+                        <!-- /Nav list -->
 
                     </div>
 
