--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
 
             <section class="hero">
 
+                <div class="container">
+
+                    <div class="row grid">
+
+                        <div class="col col-span-2"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
+
+                    </div>
+
+                </div>
+
             </section>
 
             <section></section>
