contenuto e stile hero mobile 80% circa

--- a/index.html
+++ b/index.html
@@ -97,11 +97,102 @@
 
                     <div class="row grid">
 
-                        <div class="col col-span-2"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
+                        <div class="col col-span-2">
+
+                            <div class="card flex col-col" id="main__card">
+
+                                <h3 class="card__title">Get a demo application</h3>
+
+                                <p class="card__desc">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
+                                    ratione corrupti asperiores perspiciatis minima deleniti voluptatibus quos.
+                                </p>
+
+                                <a href="#" class="button btn__large btn__blue">
+                                    <i class="fa-brands fa-apple"></i>
+                                    App Store
+                                </a>
+
+                                <figure class="card__img">
+                                    <img src="img/phone.png" alt="">
+                                </figure>
+
+
+                            </div>
+
+                        </div>
+
+                        <div class="col">
+
+                            <div class="card flex col-col">
+
+                                <i class="fa-solid fa-file-code card__icon"></i>
+
+                                <h3 class="card__title">Clean Code</h3>
+
+                                <p class="card__desc">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
+                                    ratione corrupti asperiores perspiciatis minima deleniti voluptatibus quos.
+                                </p>
+
+                            </div>
+
+
+                        </div>
+
+                        <div class="col">
+
+                            <div class="card flex col-col">
+
+                                <i class="fa-solid fa-file-code card__icon"></i>
+
+                                <h3 class="card__title">Web Design</h3>
+
+                                <p class="card__desc">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
+                                    ratione corrupti asperiores perspiciatis minima deleniti voluptatibus quos.
+                                </p>
+
+                            </div>
+
+
+                        </div>
+
+                        <div class="col">
+
+                            <div class="card flex col-col">
+
+                                <i class="fa-solid fa-file-code card__icon"></i>
+
+                                <h3 class="card__title">Developement</h3>
+
+                                <p class="card__desc">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
+                                    ratione corrupti asperiores perspiciatis minima deleniti voluptatibus quos.
+                                </p>
+
+                            </div>
+
+
+                        </div>
+
+                        <div class="col">
+
+                            <div class="card flex col-col">
+
+                                <i class="fa-solid fa-file-code card__icon"></i>
+
+                                <h3 class="card__title">Branding</h3>
+
+                                <p class="card__desc">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
+                                    ratione corrupti asperiores perspiciatis minima deleniti voluptatibus quos.
+                                </p>
+
+                            </div>
+
+
+                        </div>
 
                     </div>
 
