--- a/index.html
+++ b/index.html
@@ -100,19 +100,20 @@
                         <div class="col col-span-2">
 
                             <div class="card flex col-col" id="main__card">
+                                <div class="flex col-col card__head">
+                                    <h3 class="card__title">Get a demo application</h3>
 
-                                <h3 class="card__title">Get a demo application</h3>
+                                    <p class="card__desc">
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit
+                                        nam,
+                                        ratione corrupti asperiores perspiciatis minima deleniti voluptatibus quos.
+                                    </p>
 
-                                <p class="card__desc">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
-                                    ratione corrupti asperiores perspiciatis minima deleniti voluptatibus quos.
-                                </p>
-
-                                <a href="#" class="button btn__large btn__blue">
-                                    <i class="fa-brands fa-apple"></i>
-                                    App Store
-                                </a>
-
+                                    <a href="#" class="button btn__large btn__blue">
+                                        <i class="fa-brands fa-apple"></i>
+                                        App Store
+                                    </a>
+                                </div>
                                 <figure class="card__img">
                                     <img src="img/phone.png" alt="">
                                 </figure>
@@ -144,7 +145,7 @@
 
                             <div class="card flex col-col">
 
-                                <i class="fa-solid fa-file-code card__icon"></i>
+                                <i class="fa-solid fa-compass-drafting card__icon"></i>
 
                                 <h3 class="card__title">Web Design</h3>
 
@@ -162,7 +163,7 @@
 
                             <div class="card flex col-col">
 
-                                <i class="fa-solid fa-file-code card__icon"></i>
+                                <i class="fa-solid fa-laptop card__icon"></i>
 
                                 <h3 class="card__title">Developement</h3>
 
@@ -180,7 +181,7 @@
 
                             <div class="card flex col-col">
 
-                                <i class="fa-solid fa-file-code card__icon"></i>
+                                <i class="fa-solid fa-bullhorn card__icon"></i>
 
                                 <h3 class="card__title">Branding</h3>
 
