--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <!-- Main start -->
         <main>
 
+            <!-- Hero start -->
             <section class="hero">
 
                 <div class="container">
@@ -200,8 +201,53 @@
                 </div>
 
             </section>
+            <!-- /Hero -->
 
-            <section></section>
+            <!-- Planning start -->
+            <section class="planning">
+
+                <div class="container-small">
+
+                    <div class="row flex">
+                        <div class="col planning__head flex col-col">
+
+
+                            <figure class="planning__fig">
+                                <img src="img/planning1.png" alt="Strategic Planning">
+                            </figure>
+
+                            <h2 class="planning__title">Strategic Planning</h2>
+
+                            <p class="planning__desc">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime quo necessitatibus
+                                distinctio ad pariatur deserunt modi nam harum corrupti.
+                            </p>
+
+
+                        </div>
+                        <div class="col card flex col-col">
+                            <figure class="planning__fig">
+                                <img src="img/planning2.png" alt="Strategic Planning">
+                            </figure>
+
+                            <h2 class="planning__title">App Developement</h2>
+
+                            <p class="planning__desc">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime quo necessitatibus
+                                distinctio ad pariatur deserunt modi nam harum corrupti.
+                            </p>
+
+                            <div class="arrow__down">
+                                <i class="fa-solid fa-arrow-down-long"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </section>
+            <!-- /Planning -->
+
             <section></section>
             <section></section>
             <section></section>
