--- a/index.html
+++ b/index.html
@@ -225,20 +225,23 @@
 
 
                         </div>
-                        <div class="col card flex col-col">
-                            <figure class="planning__fig">
-                                <img src="img/planning2.png" alt="Strategic Planning">
-                            </figure>
+                        <div class="col flex planning__dev">
+                            <div class="card flex col-col">
+                                <figure class="planning__fig">
+                                    <img src="img/planning2.png" alt="Strategic Planning">
+                                </figure>
 
-                            <h2 class="planning__title">App Developement</h2>
+                                <h3 class="planning__title">App Developement</h2>
 
-                            <p class="planning__desc">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime quo necessitatibus
-                                distinctio ad pariatur deserunt modi nam harum corrupti.
-                            </p>
+                                    <p class="planning__desc">
+                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime quo
+                                        necessitatibus
+                                        distinctio ad pariatur deserunt modi nam harum corrupti.
+                                    </p>
 
-                            <div class="arrow__down">
-                                <i class="fa-solid fa-arrow-down-long"></i>
+                                    <div class="arrow__down">
+                                        <i class="fa-solid fa-arrow-down-long"></i>
+                                    </div>
                             </div>
                         </div>
                     </div>
