--- a/index.html
+++ b/index.html
@@ -209,39 +209,41 @@
                 <div class="container-small">
 
                     <div class="row flex">
-                        <div class="col planning__head flex col-col">
 
+                        <div class="col planning__head flex col-col">
 
                             <figure class="planning__fig">
                                 <img src="img/planning1.png" alt="Strategic Planning">
                             </figure>
 
-                            <h2 class="planning__title">Strategic Planning</h2>
+                            <h3 class="planning__title">Strategic Planning</h3>
 
                             <p class="planning__desc">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime quo necessitatibus
                                 distinctio ad pariatur deserunt modi nam harum corrupti.
                             </p>
 
-
                         </div>
+
+
                         <div class="col flex planning__dev">
+
                             <div class="card flex col-col">
+
                                 <figure class="planning__fig">
                                     <img src="img/planning2.png" alt="Strategic Planning">
                                 </figure>
 
-                                <h3 class="planning__title">App Developement</h2>
+                                <h4 class="planning__title">App Developement</h4>
 
-                                    <p class="planning__desc">
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod maxime quo
-                                        necessitatibus
-                                        distinctio ad pariatur deserunt modi nam harum corrupti.
-                                    </p>
+                                <p class="planning__desc">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicingelit. Quod maxime quo
+                                    necessitatibus distinctio ad pariatur deserunt modi nam harum corrupti.
+                                </p>
 
-                                    <div class="arrow__down">
-                                        <i class="fa-solid fa-arrow-down-long"></i>
-                                    </div>
+                                <div class="arrow__down">
+                                    <i class="fa-solid fa-arrow-down-long"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -251,7 +253,14 @@
             </section>
             <!-- /Planning -->
 
-            <section></section>
+            <!-- TESTIMONIAL START -->
+            <section class="testimonials">
+
+
+
+            </section>
+            <!--/TESTIMONIALS-->
+
             <section></section>
             <section></section>
             <section></section>
