inizio stile e contenuto testimonials

--- a/index.html
+++ b/index.html
@@ -256,7 +256,67 @@
             <!-- TESTIMONIAL START -->
             <section class="testimonials">
 
+                <div class="container flex col-col">
 
+                    <h4 class="testimonials__title">TESTIMONIALS</h4>
+
+                    <p class="testimonials__sub-title"> We are committed expert partners</p>
+
+                    <p class="testimonials__para">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, dolor quidem repellat similique
+                        nihil consequuntur saepe consequatur velit ipsa mollitia!
+                    </p>
+
+                    <div class="row col-col">
+                        <div class="col testimonials-card flex">
+                            <div class="testimonials-card__img flex">
+                                <figure class="flex">
+                                    <img src="img/testimonial1.jpg" alt="Testimonial 1">
+                                </figure>
+                            </div>
+                            <div class="testimonials-card__desc">
+                                <p class="card__desc">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam a vitae, excepturi
+                                    deserunt architecto vero. Nesciunt aliquid labore eius. Doloremque?
+                                </p>
+                                <p class="card_auth">NAT REYNOLDS</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col testimonials-card flex">
+                            <div class="testimonials-card__img flex">
+                                <figure class="flex">
+                                    <img src="img/testimonial1.jpg" alt="Testimonial 1">
+                                </figure>
+                            </div>
+                            <div class="testimonials-card__desc">
+                                <p class="card__desc">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam a vitae, excepturi
+                                    deserunt architecto vero. Nesciunt aliquid labore eius. Doloremque?
+                                </p>
+                                <p class="card_auth">NAT REYNOLDS</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col testimonials-card flex">
+                            <div class="testimonials-card__img flex">
+                                <figure class="flex">
+                                    <img src="img/testimonial1.jpg" alt="Testimonial 1">
+                                </figure>
+                            </div>
+                            <div class="testimonials-card__desc">
+                                <p class="card__desc">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam a vitae, excepturi
+                                    deserunt architecto vero. Nesciunt aliquid labore eius. Doloremque?
+                                </p>
+                                <p class="card_auth">NAT REYNOLDS</p>
+                            </div>
+
+                        </div>
+
+                    </div>
 
             </section>
             <!--/TESTIMONIALS-->
