hero with flex x Gianluca :D

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
 
                 <div class="container">
 
-                    <div class="row grid">
+                    <!-- TODO: CAMBIO GRID CON FLEX -->
+                    <div class="row flex">
 
                         <div class="col col-span-2">
 
