--- a/index.html
+++ b/index.html
@@ -268,17 +268,15 @@
                         nihil consequuntur saepe consequatur velit ipsa mollitia!
                     </p>
 
-                    <div class="row col-col">
+                    <div class="row flex col-col">
                         <div class="col testimonials-card flex">
-                            <div class="testimonials-card__img flex">
-                                <figure class="flex">
-                                    <img src="img/testimonial1.jpg" alt="Testimonial 1">
-                                </figure>
-                            </div>
+                            <img src="img/testimonial1.jpg" alt="Testimonial 1">
                             <div class="testimonials-card__desc">
                                 <p class="card__desc">
+                                    <i class="fa-solid fa-quote-left"></i>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam a vitae, excepturi
                                     deserunt architecto vero. Nesciunt aliquid labore eius. Doloremque?
+                                    <i class="fa-solid fa-quote-right"></i>
                                 </p>
                                 <p class="card_auth">NAT REYNOLDS</p>
                             </div>
@@ -286,33 +284,29 @@
                         </div>
 
                         <div class="col testimonials-card flex">
-                            <div class="testimonials-card__img flex">
-                                <figure class="flex">
-                                    <img src="img/testimonial1.jpg" alt="Testimonial 1">
-                                </figure>
-                            </div>
+                            <img src="img/testimonial2.jpg" alt="Testimonial 1">
                             <div class="testimonials-card__desc">
                                 <p class="card__desc">
+                                    <i class="fa-solid fa-quote-left"></i>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam a vitae, excepturi
                                     deserunt architecto vero. Nesciunt aliquid labore eius. Doloremque?
+                                    <i class="fa-solid fa-quote-right"></i>
                                 </p>
-                                <p class="card_auth">NAT REYNOLDS</p>
+                                <p class="card_auth">CELIA ALMEDA</p>
                             </div>
 
                         </div>
 
                         <div class="col testimonials-card flex">
-                            <div class="testimonials-card__img flex">
-                                <figure class="flex">
-                                    <img src="img/testimonial1.jpg" alt="Testimonial 1">
-                                </figure>
-                            </div>
+                            <img src="img/testimonial3.jpg" alt="Testimonial 1">
                             <div class="testimonials-card__desc">
                                 <p class="card__desc">
+                                    <i class="fa-solid fa-quote-left"></i>
                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam a vitae, excepturi
                                     deserunt architecto vero. Nesciunt aliquid labore eius. Doloremque?
+                                    <i class="fa-solid fa-quote-right"></i>
                                 </p>
-                                <p class="card_auth">NAT REYNOLDS</p>
+                                <p class="card_auth">BOB ROBERTS</p>
                             </div>
 
                         </div>
