--- a/index.html
+++ b/index.html
@@ -316,7 +316,112 @@
             </section>
             <!--/TESTIMONIALS-->
 
-            <section></section>
+            <!-- BENEFITS START -->
+            <section class="benefits">
+
+                <div class="container">
+
+                    <h3 class="benefits__title"> Benefits of working with us</h3>
+
+                    <div class="row flex">
+
+                        <div class="col card flex col-col">
+
+                            <h4 class="card__title">01</h4>
+                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <p class="card__paragraph">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
+                                quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
+                                asperiores. Amet reiciendis veniam et iusto molestiae.
+                            </p>
+                            <a href="#" class="button btn__purple">
+                                more
+                            </a>
+
+                        </div>
+
+                        <div class="col card flex col-col">
+
+                            <h4 class="card__title">01</h4>
+                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <p class="card__paragraph">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
+                                quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
+                                asperiores. Amet reiciendis veniam et iusto molestiae.
+                            </p>
+                            <a href="#" class="button btn__purple">
+                                more
+                            </a>
+
+                        </div>
+
+                        <div class="col card flex col-col">
+
+                            <h4 class="card__title">01</h4>
+                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <p class="card__paragraph">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
+                                quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
+                                asperiores. Amet reiciendis veniam et iusto molestiae.
+                            </p>
+                            <a href="#" class="button btn__purple">
+                                more
+                            </a>
+
+                        </div>
+
+                        <div class="col card flex col-col">
+
+                            <h4 class="card__title">01</h4>
+                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <p class="card__paragraph">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
+                                quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
+                                asperiores. Amet reiciendis veniam et iusto molestiae.
+                            </p>
+                            <a href="#" class="button btn__purple">
+                                more
+                            </a>
+
+                        </div>
+
+                        <div class="col card flex col-col">
+
+                            <h4 class="card__title">01</h4>
+                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <p class="card__paragraph">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
+                                quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
+                                asperiores. Amet reiciendis veniam et iusto molestiae.
+                            </p>
+                            <a href="#" class="button btn__purple">
+                                more
+                            </a>
+
+                        </div>
+
+                        <div class="col card flex col-col">
+
+                            <h4 class="card__title">01</h4>
+                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <p class="card__paragraph">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
+                                quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
+                                asperiores. Amet reiciendis veniam et iusto molestiae.
+                            </p>
+                            <a href="#" class="button btn__purple">
+                                more
+                            </a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+            <!-- /BENEFITS -->
+
             <section></section>
             <section></section>
 
