--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
 
                         <div class="col card flex col-col">
 
-                            <h4 class="card__title">01</h4>
-                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <h4 class="card__title">02</h4>
+                            <h5 class="card__sub-title">Creative Team</h5>
                             <p class="card__paragraph">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
@@ -357,8 +357,8 @@
 
                         <div class="col card flex col-col">
 
-                            <h4 class="card__title">01</h4>
-                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <h4 class="card__title">03</h4>
+                            <h5 class="card__sub-title">Amazing Results</h5>
                             <p class="card__paragraph">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
@@ -372,8 +372,8 @@
 
                         <div class="col card flex col-col">
 
-                            <h4 class="card__title">01</h4>
-                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <h4 class="card__title">04</h4>
+                            <h5 class="card__sub-title">Best Pricing</h5>
                             <p class="card__paragraph">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
@@ -387,8 +387,8 @@
 
                         <div class="col card flex col-col">
 
-                            <h4 class="card__title">01</h4>
-                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <h4 class="card__title">05</h4>
+                            <h5 class="card__sub-title">Innovations</h5>
                             <p class="card__paragraph">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
@@ -402,8 +402,8 @@
 
                         <div class="col card flex col-col">
 
-                            <h4 class="card__title">01</h4>
-                            <h5 class="card__sub-title">Hight Quality</h5>
+                            <h4 class="card__title">06</h4>
+                            <h5 class="card__sub-title">24/7 Support</h5>
                             <p class="card__paragraph">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolore minus officiis
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
