button era stretched in benefits

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
                                 asperiores. Amet reiciendis veniam et iusto molestiae.
                             </p>
-                            <a href="#" class="button btn__purple">
+                            <a href="#" class="button btn__purple btn__large">
                                 more
                             </a>
 
@@ -349,7 +349,7 @@
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
                                 asperiores. Amet reiciendis veniam et iusto molestiae.
                             </p>
-                            <a href="#" class="button btn__purple">
+                            <a href="#" class="button btn__purple btn__large">
                                 more
                             </a>
 
@@ -364,7 +364,7 @@
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
                                 asperiores. Amet reiciendis veniam et iusto molestiae.
                             </p>
-                            <a href="#" class="button btn__purple">
+                            <a href="#" class="button btn__purple btn__large">
                                 more
                             </a>
 
@@ -379,7 +379,7 @@
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
                                 asperiores. Amet reiciendis veniam et iusto molestiae.
                             </p>
-                            <a href="#" class="button btn__purple">
+                            <a href="#" class="button btn__purple btn__large">
                                 more
                             </a>
 
@@ -394,7 +394,7 @@
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
                                 asperiores. Amet reiciendis veniam et iusto molestiae.
                             </p>
-                            <a href="#" class="button btn__purple">
+                            <a href="#" class="button btn__purple btn__large">
                                 more
                             </a>
 
@@ -409,7 +409,7 @@
                                 quidem eius explicabo laborum, reprehenderit delectus ut sequi voluptatibus sunt fuga
                                 asperiores. Amet reiciendis veniam et iusto molestiae.
                             </p>
-                            <a href="#" class="button btn__purple">
+                            <a href="#" class="button btn__purple btn__large">
                                 more
                             </a>
 
