--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
                     <div class="row flex col-col">
                         <div class="col testimonials-card flex">
-                            <img src="img/testimonial1.jpg" alt="Testimonial 1">
+                            <img src="img/testimonial1.jpg" alt="Testimonial 1" class="round__img">
                             <div class="testimonials-card__desc">
                                 <p class="card__desc">
                                     <i class="fa-solid fa-quote-left"></i>
@@ -284,7 +284,7 @@
                         </div>
 
                         <div class="col testimonials-card flex">
-                            <img src="img/testimonial2.jpg" alt="Testimonial 1">
+                            <img src="img/testimonial2.jpg" alt="Testimonial 1" class="round__img">
                             <div class="testimonials-card__desc">
                                 <p class="card__desc">
                                     <i class="fa-solid fa-quote-left"></i>
@@ -298,7 +298,7 @@
                         </div>
 
                         <div class="col testimonials-card flex">
-                            <img src="img/testimonial3.jpg" alt="Testimonial 1">
+                            <img src="img/testimonial3.jpg" alt="Testimonial 1" class="round__img">
                             <div class="testimonials-card__desc">
                                 <p class="card__desc">
                                     <i class="fa-solid fa-quote-left"></i>
@@ -422,7 +422,60 @@
             </section>
             <!-- /BENEFITS -->
 
-            <section></section>
+            <!-- ABOUT US START -->
+            <section class="about-us">
+
+                <div class="container">
+
+                    <div class="row">
+
+                        <div class="row flex">
+
+                            <div class="col flex col-col about__head">
+
+                                <h3 class="card__title"> About Us</h3>
+
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi odit fugiat autem est
+                                    expedita. Perspiciatis placeat facilis velit voluptate porro voluptates in officia
+                                    id nesciunt a eaque quod et atque, laborum odit cupiditate, corrupti totam iusto
+                                    dicta pariatur eligendi quidem nulla. Rerum illum saepe ipsam rem. Similique,
+                                    exercitationem impedit! Inventore!</p>
+
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod neque nam expedita,
+                                    iusto necessitatibus veritatis totam recusandae maxime eaque, nobis unde sapiente,
+                                    amet exercitationem. Dolorem atque molestiae minus tempora velit sed in
+                                    reprehenderit delectus ea, eligendi praesentium natus hic incidunt.</p>
+
+                            </div>
+
+                            <div class="col flex col-col about__body">
+
+                                <div class="about__img">
+                                    <img src="img/about.jpg" alt="About image" class="round__img">
+                                    <!-- TODO: inserire apice in absolute su img -->
+                                </div>
+
+                                <h4 class="card__sub-title">
+                                    I help companies Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                    Aspernatur, eaque.
+                                </h4>
+
+                                <a href="#" class="button btn__purple">
+                                    Find me on linkedin
+                                </a>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+            <!-- /ABOUT US -->
+
+
             <section></section>
 
         </main>
