--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                         App Store
                                     </a>
                                 </div>
-                                <figure class="card__img">
+                                <figure class="card__img flex">
                                     <img src="img/phone.png" alt="">
                                 </figure>
 
@@ -427,44 +427,40 @@
 
                 <div class="container">
 
-                    <div class="row">
+                    <div class="row flex">
 
-                        <div class="row flex">
+                        <div class="col flex col-col about__head">
 
-                            <div class="col flex col-col about__head">
+                            <h3 class="card__title"> About Us</h3>
 
-                                <h3 class="card__title"> About Us</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi odit fugiat autem est
+                                expedita. Perspiciatis placeat facilis velit voluptate porro voluptates in officia
+                                id nesciunt a eaque quod et atque, laborum odit cupiditate, corrupti totam iusto
+                                dicta pariatur eligendi quidem nulla. Rerum illum saepe ipsam rem. Similique,
+                                exercitationem impedit! Inventore!</p>
 
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi odit fugiat autem est
-                                    expedita. Perspiciatis placeat facilis velit voluptate porro voluptates in officia
-                                    id nesciunt a eaque quod et atque, laborum odit cupiditate, corrupti totam iusto
-                                    dicta pariatur eligendi quidem nulla. Rerum illum saepe ipsam rem. Similique,
-                                    exercitationem impedit! Inventore!</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod neque nam expedita,
+                                iusto necessitatibus veritatis totam recusandae maxime eaque, nobis unde sapiente,
+                                amet exercitationem. Dolorem atque molestiae minus tempora velit sed in
+                                reprehenderit delectus ea, eligendi praesentium natus hic incidunt.</p>
 
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod neque nam expedita,
-                                    iusto necessitatibus veritatis totam recusandae maxime eaque, nobis unde sapiente,
-                                    amet exercitationem. Dolorem atque molestiae minus tempora velit sed in
-                                    reprehenderit delectus ea, eligendi praesentium natus hic incidunt.</p>
+                        </div>
 
+                        <div class="col flex col-col about__body">
+
+                            <div class="about__img">
+                                <img src="img/about.jpg" alt="About image" class="round__img">
+                                <!-- TODO: inserire apice in absolute su img -->
                             </div>
 
-                            <div class="col flex col-col about__body">
+                            <h4 class="card__sub-title">
+                                I help companies Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Aspernatur, eaque.
+                            </h4>
 
-                                <div class="about__img">
-                                    <img src="img/about.jpg" alt="About image" class="round__img">
-                                    <!-- TODO: inserire apice in absolute su img -->
-                                </div>
-
-                                <h4 class="card__sub-title">
-                                    I help companies Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                    Aspernatur, eaque.
-                                </h4>
-
-                                <a href="#" class="button btn__purple">
-                                    Find me on linkedin
-                                </a>
-
-                            </div>
+                            <a href="#" class="button btn__purple">
+                                Find me on linkedin
+                            </a>
 
                         </div>
 
