--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
     <head>
         <meta charset="UTF-8">
@@ -103,7 +103,7 @@
 
                             <div class="card flex col-col" id="main__card">
                                 <div class="flex col-col card__head">
-                                    <h3 class="card__title">Get a demo application</h3>
+                                    <h3 class="hero-card__title">Get a demo application</h3>
 
                                     <p class="card__desc">
                                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit
@@ -131,7 +131,7 @@
 
                                 <i class="fa-solid fa-file-code card__icon"></i>
 
-                                <h3 class="card__title">Clean Code</h3>
+                                <h3 class="hero-card__title">Clean Code</h3>
 
                                 <p class="card__desc">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
@@ -149,7 +149,7 @@
 
                                 <i class="fa-solid fa-compass-drafting card__icon"></i>
 
-                                <h3 class="card__title">Web Design</h3>
+                                <h3 class="hero-card__title">Web Design</h3>
 
                                 <p class="card__desc">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
@@ -167,7 +167,7 @@
 
                                 <i class="fa-solid fa-laptop card__icon"></i>
 
-                                <h3 class="card__title">Developement</h3>
+                                <h3 class="hero-card__title">Developement</h3>
 
                                 <p class="card__desc">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
@@ -185,7 +185,7 @@
 
                                 <i class="fa-solid fa-bullhorn card__icon"></i>
 
-                                <h3 class="card__title">Branding</h3>
+                                <h3 class="hero-card__title">Branding</h3>
 
                                 <p class="card__desc">
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt nesciunt velit nam,
@@ -312,6 +312,7 @@
                         </div>
 
                     </div>
+                </div>
 
             </section>
             <!--/TESTIMONIALS-->
@@ -472,7 +473,7 @@
             <!-- /ABOUT US -->
 
 
-            <section></section>
+            <!-- <section></section> -->
 
         </main>
         <!--/Main-->
