get started responsive

--- a/index.html
+++ b/index.html
@@ -473,7 +473,37 @@
             <!-- /ABOUT US -->
 
 
-            <!-- <section></section> -->
+            <section class="started">
+                <div class="container-xs">
+
+                    <h3 class="started__title">Get started</h3>
+                    <h4 class="started__sub-title">Simple, Transparent Pricing</h4>
+                    <h5 class="started__free">It's Free!</h5>
+                    <!-- Devo fare un flex, altrimenti mi collassano i margini e i padding, ma non so perché -->
+                    <div class="flex col-col">
+
+                        <p class="started__paragraph">
+                            We're still in beta and we will be for awhile. As we add more
+                            functionality, we'll look into other plans with more controls.
+                        </p>
+                        <a href="#" class="button">Get Started</a>
+                        <ul id="copy" class="flex">
+                            <li>
+                                Copyright 2021 Boolean
+                            </li>
+
+                            <li>Classe XX</li>
+
+                            <li>
+                                <a href="#"> Privacy policy</a>
+                            </li>
+
+                        </ul>
+
+                    </div>
+
+                </div>
+            </section>
 
         </main>
         <!--/Main-->
