footer responsive + refactory

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- TODO: Debug class -->
 
-    <body class="debug">
+    <body class="">
 
         <!-- Header start -->
         <header class="main-header">
@@ -509,7 +509,20 @@
         <!--/Main-->
 
         <!-- Footer start -->
-        <footer>
+        <footer class="main-footer">
+
+            <div class="container-xs">
+
+                <p class="footer__paragraph">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti cumque molestiae facilis deserunt
+                    aut non quae laboriosam velit impedit eaque?
+                </p>
+
+                <p class="footer__paragraph">
+                    <a href="#" class="footer__link">Lorem ipsum</a> dolores sitter amet consectetur scelerisque <a
+                        href="#" class="footer__link">Boolean Careers</a>
+                </p>
+            </div>
 
         </footer>
         <!--/Footer-->
